lab1/Test/L1-A-10-98.output
Error Type B at Line 11
Error Type A at Line 40
