lab1/Test/L1-A-10-98.cmm
float FaXx7m8akkejuH6yjNn ( ) {
  if ( OD_dPR1lPyfEO4QS )   if ( o1z5f7LS53ds12d ) 
      IV0iVxU8LDpaCMA ;
else   while ( T )   return Epa || nRPCbhD_2K && I8q 
    != TnLcOnKBbbZ - HUA0 ( qHJ_nSe , sX = TwwiyRqrbDjX 
    < ISWVkwDjQXtsNzNV2 + La45Bl7GN0DaGCr * QFy [ o0 > 
    Tk0udnpDHuz4ltq ( oBNlEvIXfo = yzvXTws6S82y5 && ZKkq 
    - JgZ [ aV = dKJfjhPv7 || cik1F7QEpXW >= ( bJXZVZ2oOqjkq4XAqG 
    || lpdzrORbe <= o1jNoYfcl ) / iG2YoojUV == 138139256 
    ] ) . ax ] ) / - ! 353790546.1858937162 * iSJ7V4VN7RR_t08uFX1S 
    ( * ) ;



}
struct Hl_ShtCGRFJ5q8 ;
int ;
int NjwmIz ( int w7hNc8wuyGxk , int uXebBKLtUF03O6q 
  ) {
  z22Nm5VNv ;
  MuJaZavn8mm ;
  K ;
{
{
      eqURmp9gb7q65 ;
      if ( TlWQIzQLrOUbeLG )       wcBXs2qJ ;
else       if ( KABwrVCkzF8xAabJjF )       N_HytDH3SpXllL_PmF 
        ;


    }  }}
struct ErH3YAAw {
  struct e59wnkcWKr9mYhr0oF_t IB3KOFA ;
};
struct {
  struct U3o i9os4nKq9C2f ;
  int xCT , P_HxsCYAsnsG55 = eMAzQ ;
};
int CZctcTyqv9lbZImq0 [ 414855349 ] , l8LvIpf3AjlJ9 
  &

;
